k8s/base/services/photo-upload/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photo-upload
  namespace: photo-upload
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: photo-upload
---
apiVersion: v1
kind: Service
metadata:
  name: photo-upload-media
  namespace: photo-upload
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: photo-upload
