k8s/base/services/photo-upload/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: photo-upload
  namespace: photo-upload
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`hochzeit.lffl.me`)
      kind: Rule
      services:
        - name: photo-upload
          port: 8000
    - match: Host(`hochzeit.lffl.me`) && (Path(`/media`) || Path(`/static`))
      kind: Rule
      services:
        - name: photo-upload-media
          port: 80
